--- a/index.html
+++ b/index.html
@@ -84,15 +84,20 @@
 	<main>
 
 		<div class="bukantBanner">
-			<img  src="asset/icon/logoMain" alt="Bukant banner">
+			<img  src="asset/banner/logoBanner2.png" alt="Bukant banner">
 		</div>		
 
-		<section>
+		<section id="bukantexclusive">
+
 			<h1>Bukant Titles</h1>
+			<button class="bookButton" onclick="window.open('page/categories/bukanttitles.html','_parent')">View All</button>
 
 			<div class="rails">
 
 				<div class="card">
+					<div class="newarrival">
+						<p>Coming Soon</p>
+					</div>
 					<img class="bookCover" src="asset/books/1986.jpg" alt="1986">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
@@ -133,84 +138,6 @@
 
 				<div class="card">
 					<img class="bookCover" src="asset/books/elee.jpg" alt="1986">
-					<div class="bookDetail">
-						<div class="bookDetailAlpha">
-							<p>Rs. 300</p>
-						</div>
-						<div class="bookDetailBeta">
-							<button class="bookButton" onclick="window.open('page/books/1986-bas-harayepachi.html','_parent')">View</button>
-							<button class="bookButton" onclick="addToCart()">Add to Cart</button>
-						</div>
-					</div>
-				</div>
-
-				<div class="card">
-					<img class="bookCover" src="asset/books/kash-bhada.jpg" alt="1986">
-					<div class="bookDetail">
-						<div class="bookDetailAlpha">
-							<p>Rs. 300</p>
-						</div>
-						<div class="bookDetailBeta">
-							<button class="bookButton" onclick="window.open('page/books/1986-bas-harayepachi.html','_parent')">View</button>
-							<button class="bookButton" onclick="addToCart()">Add to Cart</button>
-						</div>
-					</div>
-				</div>
-
-				<div class="card">
-					<img class="bookCover" src="asset/books/marmako-mithas.jpg" alt="1986">
-					<div class="bookDetail">
-						<div class="bookDetailAlpha">
-							<p>Rs. 300</p>
-						</div>
-						<div class="bookDetailBeta">
-							<button class="bookButton" onclick="window.open('page/books/1986-bas-harayepachi.html','_parent')">View</button>
-							<button class="bookButton" onclick="addToCart()">Add to Cart</button>
-						</div>
-					</div>
-				</div>
-
-				<div class="card">
-					<img class="bookCover" src="asset/books/raato-ribon.jpg" alt="1986">
-					<div class="bookDetail">
-						<div class="bookDetailAlpha">
-							<p>Rs. 300</p>
-						</div>
-						<div class="bookDetailBeta">
-							<button class="bookButton" onclick="window.open('page/books/1986-bas-harayepachi.html','_parent')">View</button>
-							<button class="bookButton" onclick="addToCart()">Add to Cart</button>
-						</div>
-					</div>
-				</div>
-
-				<div class="card">
-					<img class="bookCover" src="asset/books/tangsing.jpg" alt="1986">
-					<div class="bookDetail">
-						<div class="bookDetailAlpha">
-							<p>Rs. 300</p>
-						</div>
-						<div class="bookDetailBeta">
-							<button class="bookButton" onclick="window.open('page/books/1986-bas-harayepachi.html','_parent')">View</button>
-							<button class="bookButton" onclick="addToCart()">Add to Cart</button>
-						</div>
-					</div>
-				</div>
-
-				<div class="card">
-					<img class="bookCover" src="asset/books/testadekhi-satlazsamma.jpg" alt="1986">
-					<div class="bookDetail">
-						<div class="bookDetailAlpha">
-							<p>Rs. 300</p>
-						</div>
-						<div class="bookDetailBeta">
-							<button class="bookButton" onclick="window.open('page/books/1986-bas-harayepachi.html','_parent')">View</button>
-							<button class="bookButton" onclick="addToCart()">Add to Cart</button>
-						</div>
-					</div>
-				</div>
-
-				<div class="card">
-					<img class="bookCover" src="asset/books/the-endless-wait.jpg" alt="1986">
 					<div class="bookDetail">
 						<div class="bookDetailAlpha">
 							<p>Rs. 300</p>
